--- a/notes/week5.org
+++ b/notes/week5.org
@@ -15,8 +15,7 @@
 #+end_src
 * divide
 ** get one's digit
-#+name: ones_digit_mips
-#+begin_src mips :results drawer
+#+begin_src mips
 .text
 main:
             li $s0 95
@@ -33,13 +32,13 @@ print_int:
 exit:
 #+end_src
 
+#+RESULTS:
 :results:
 5
 :end:
 
 * print hex
 ** mips
-#+name: print_hex_mips
 #+begin_src mips :results drawer
 .data
 hex_digit_table:
@@ -67,12 +66,12 @@ loop:
             jr $ra
 #+end_src
 
+#+RESULTS:
 :results:
 CAFEF00D
 :end:
 
 ** c++
-#+name: print_hex_cpp
 #+begin_src cpp :results drawer
 #include <iostream>
 using namespace std;
@@ -99,6 +98,7 @@ void print_hex(int num) {
 
 #+end_src
 
+#+RESULTS:
 :results:
 CAFEF00D
 :end:
