--- a/architecture.org
+++ b/architecture.org
@@ -23,56 +23,177 @@
 ** [X] The stack, byte-ordering
 *** [X] §2.8
 * [ ] Week 6
-** [ ] Memory layout, local variables
-DEADLINE: <2024-10-01 Tue>
+:PROPERTIES:
+:ID:       1c50ef92-ba51-40d8-82b7-9522aef6a461
+:END:
+** [X] Memory layout, local variables
+SCHEDULED: <2024-10-01 Tue>
+:PROPERTIES:
+:ID:       c3c22f1c-a7e0-47af-a73e-45bef1b791b5
+:END:
 ** [ ] REVIEW
-DEADLINE: <2024-10-03 Thu>
+SCHEDULED: <2024-10-03 Thu>
+:PROPERTIES:
+:ID:       630a6446-87b9-413b-aa62-58aa633cfbdb
+:END:
 * [ ] Week 7
+:PROPERTIES:
+:ID:       18aaaa30-291a-4189-9586-c2d423aaf3c8
+:END:
 ** [ ] hw 2: disassembler
-DEADLINE: <2024-10-08 Tue>
+SCHEDULED: <2024-10-08 Tue>
+:PROPERTIES:
+:ID:       e98b0482-441a-4957-ba84-fbbc456ecfb2
+:END:
 ** [ ] REVIEW
-DEADLINE: <2024-10-08 Tue>
-** [ ] MIDTERM
+SCHEDULED: <2024-10-08 Tue>
+:PROPERTIES:
+:ID:       6adfa74f-5134-4063-8614-3da72b46717c
+:END:
+** TODO MIDTERM
+DEADLINE: <2024-10-10 Thu>
+:PROPERTIES:
+:ID:       5d95e041-03be-4256-8588-4477f7545821
+:END:
 * [ ] Week 8
+:PROPERTIES:
+:ID:       790f82ab-0645-45d4-9301-7f0a82b0e6c1
+:END:
 ** [ ] IEEE 754 Floating point
 DEADLINE: <2024-10-15 Tue>
+:PROPERTIES:
+:ID:       44360280-7823-4e61-aa58-f60d6714c1b4
+:END:
 *** [ ] §3.5
+:PROPERTIES:
+:ID:       76ce3ccf-48f5-4f34-b4c4-562a96103cf8
+:END:
 ** [ ] Weird things about IEEE 754, floating-point instructions
 DEADLINE: <2024-10-17 Thu>
+:PROPERTIES:
+:ID:       56c713cb-63a5-44e3-827e-cb8d51e94d18
+:END:
 * [ ] Week 9
+:PROPERTIES:
+:ID:       ac3a14a9-3482-4552-969f-4965ccb6ecb7
+:END:
 ** [ ] Logic gates
 DEADLINE: <2024-10-22 Tue>
+:PROPERTIES:
+:ID:       b5e71209-841a-4b5f-88e7-314ba385e876
+:END:
 ** [ ] More logic gates, multiplexers, comparator
 DEADLINE: <2024-10-24 Thu>
+:PROPERTIES:
+:ID:       3099f997-3a66-47d6-95c9-62e2975cbb3e
+:END:
 * [ ] Week 10
+:PROPERTIES:
+:ID:       13d4952e-06af-4c3f-95d1-5471b00ad378
+:END:
 ** [ ] Floating-point gaps, Datapath
 DEADLINE: <2024-10-29 Tue>
+:PROPERTIES:
+:ID:       3d8f5163-36ca-4c70-af31-958d6d2791c6
+:END:
 *** [ ] §4.1–3
 DEADLINE: <2024-10-29 Tue>
+:PROPERTIES:
+:ID:       d552abec-845a-4255-9d5a-4ac4e1b0ddec
+:END:
 ** [ ] Datapath and control
 DEADLINE: <2024-10-31 Thu>
+:PROPERTIES:
+:ID:       4f631502-7731-453a-955a-43c17d70104c
+:END:
 *** [ ] §4.4,4.5
 DEADLINE: <2024-10-31 Thu>
+:PROPERTIES:
+:ID:       35efae44-4e85-46a5-b55f-3eeb24a2084f
+:END:
 * [ ] Week 11
+:PROPERTIES:
+:ID:       bb79c8ad-cc2c-40a8-8be8-359c30b10a26
+:END:
 ** [ ] Control and pipelining, metric prefixes
 DEADLINE: <2024-11-05 Tue>
+:PROPERTIES:
+:ID:       bda1fcae-fecc-4752-9b67-0cecf02ffac8
+:END:
 *** [ ] §4.6
+:PROPERTIES:
+:ID:       2689d6cd-cdf6-42b5-a676-972ca97e05d4
+:END:
 ** [ ] Pipeline registers, pipeline hazards
 DEADLINE: <2024-11-07 Thu>
+:PROPERTIES:
+:ID:       4a2b9e5f-a840-497c-80dc-137b275151f6
+:END:
 *** [ ] §4.7–9,4.11(optional)
+:PROPERTIES:
+:ID:       328d901c-0f22-47ae-94c6-80bc3ef86a9e
+:END:
 * [ ] Week 12
+:PROPERTIES:
+:ID:       7fb41056-cfaf-4c36-80e5-f987b2599ffa
+:END:
 ** [ ] Intro to caching
+:PROPERTIES:
+:ID:       e99ac3c7-d928-47c3-92a9-ba9890924650
+:END:
 *** [ ] §5.1,5.2
+:PROPERTIES:
+:ID:       e713222e-c8e1-48b7-a4ac-c2cf3a7c8c04
+:END:
 ** [ ] Cache types, cache misses
+:PROPERTIES:
+:ID:       ccf36c65-4901-48a2-a8ea-da65c9302ecd
+:END:
 * [ ] Week 13
+:PROPERTIES:
+:ID:       7a4e986f-01ec-4772-9947-7381de31d575
+:END:
 ** [ ] Block-replacement policies, write-through, write-back
+:PROPERTIES:
+:ID:       523e5b27-88b2-4060-b8f0-e618fa850cd5
+:END:
 ** [ ] AMAT, Amdahl’s Law
+:PROPERTIES:
+:ID:       bf02aef3-2e25-488e-a070-b6d69748c758
+:END:
 * [ ] Week 14
+:PROPERTIES:
+:ID:       6222ef9e-da77-43b5-9d28-d51a3aa326a7
+:END:
 ** [ ] OPEN
+:PROPERTIES:
+:ID:       85907ab8-c3af-4cd1-ad16-2e19692adc2a
+:END:
 ** [ ] OPEN
+:PROPERTIES:
+:ID:       5627f18b-2c6b-4a2f-b63b-4388d88523f6
+:END:
 * [ ] Week 15
+:PROPERTIES:
+:ID:       26d6c543-013a-478b-8e19-bce59421103c
+:END:
 ** [ ] REVIEW
+:PROPERTIES:
+:ID:       e92cce90-a7c6-4005-a588-5814fa05ae62
+:END:
 ** [ ] REVIEW
+:PROPERTIES:
+:ID:       fd755389-ffa4-4d94-90f7-62ec2e974d9a
+:END:
 * [ ] Week 16
+:PROPERTIES:
+:ID:       b605f36b-4bc8-409e-b536-4598772911a1
+:END:
 ** [ ] FINAL EXAM
+:PROPERTIES:
+:ID:       a25858e9-c648-475a-9b9c-5e9aeccd7ba6
+:END:
 * [ ] *Inbox
+:PROPERTIES:
+:ID:       7b8bb650-484a-4c10-a465-5016e708442e
+:END:
