--- a/architecture.org
+++ b/architecture.org
@@ -22,7 +22,7 @@
 *** [X] §3.3,3.4
 ** [X] The stack, byte-ordering
 *** [X] §2.8
-* [ ] Week 6
+* [X] Week 6
 :PROPERTIES:
 :ID:       1c50ef92-ba51-40d8-82b7-9522aef6a461
 :END:
@@ -31,82 +31,82 @@ SCHEDULED: <2024-10-01 Tue>
 :PROPERTIES:
 :ID:       c3c22f1c-a7e0-47af-a73e-45bef1b791b5
 :END:
-** [ ] REVIEW
+** [X] REVIEW
 SCHEDULED: <2024-10-03 Thu>
 :PROPERTIES:
 :ID:       630a6446-87b9-413b-aa62-58aa633cfbdb
 :END:
-* [ ] Week 7
+* [X] Week 7
 :PROPERTIES:
 :ID:       18aaaa30-291a-4189-9586-c2d423aaf3c8
 :END:
-** [ ] hw 2: disassembler
+** [X] hw 2: disassembler
 SCHEDULED: <2024-10-08 Tue>
 :PROPERTIES:
 :ID:       e98b0482-441a-4957-ba84-fbbc456ecfb2
 :END:
-** [ ] REVIEW
+** [X] REVIEW
 SCHEDULED: <2024-10-08 Tue>
 :PROPERTIES:
 :ID:       6adfa74f-5134-4063-8614-3da72b46717c
 :END:
-** TODO MIDTERM
+** [X] MIDTERM
 DEADLINE: <2024-10-10 Thu>
 :PROPERTIES:
 :ID:       5d95e041-03be-4256-8588-4477f7545821
 :END:
-* [ ] Week 8
+* [X] Week 8
 :PROPERTIES:
 :ID:       790f82ab-0645-45d4-9301-7f0a82b0e6c1
 :END:
-** [ ] IEEE 754 Floating point
+** [X] IEEE 754 Floating point
 DEADLINE: <2024-10-15 Tue>
 :PROPERTIES:
 :ID:       44360280-7823-4e61-aa58-f60d6714c1b4
 :END:
-*** [ ] §3.5
+*** [X] §3.5
 :PROPERTIES:
 :ID:       76ce3ccf-48f5-4f34-b4c4-562a96103cf8
 :END:
-** [ ] Weird things about IEEE 754, floating-point instructions
+** [X] Weird things about IEEE 754, floating-point instructions
 DEADLINE: <2024-10-17 Thu>
 :PROPERTIES:
 :ID:       56c713cb-63a5-44e3-827e-cb8d51e94d18
 :END:
-* [ ] Week 9
+* [X] Week 9
 :PROPERTIES:
 :ID:       ac3a14a9-3482-4552-969f-4965ccb6ecb7
 :END:
-** [ ] Logic gates
+** [X] Logic gates
 DEADLINE: <2024-10-22 Tue>
 :PROPERTIES:
 :ID:       b5e71209-841a-4b5f-88e7-314ba385e876
 :END:
-** [ ] More logic gates, multiplexers, comparator
+** [X] More logic gates, multiplexers, comparator
 DEADLINE: <2024-10-24 Thu>
 :PROPERTIES:
 :ID:       3099f997-3a66-47d6-95c9-62e2975cbb3e
 :END:
-* [ ] Week 10
+* [X] Week 10
 :PROPERTIES:
 :ID:       13d4952e-06af-4c3f-95d1-5471b00ad378
 :END:
-** [ ] Floating-point gaps, Datapath
+** [X] Floating-point gaps, Datapath
 DEADLINE: <2024-10-29 Tue>
 :PROPERTIES:
 :ID:       3d8f5163-36ca-4c70-af31-958d6d2791c6
 :END:
-*** [ ] §4.1–3
+*** [X] §4.1–3
 DEADLINE: <2024-10-29 Tue>
 :PROPERTIES:
 :ID:       d552abec-845a-4255-9d5a-4ac4e1b0ddec
 :END:
-** [ ] Datapath and control
+** [X] Datapath and control
 DEADLINE: <2024-10-31 Thu>
 :PROPERTIES:
 :ID:       4f631502-7731-453a-955a-43c17d70104c
 :END:
-*** [ ] §4.4,4.5
+*** [X] §4.4,4.5
 DEADLINE: <2024-10-31 Thu>
 :PROPERTIES:
 :ID:       35efae44-4e85-46a5-b55f-3eeb24a2084f
@@ -115,12 +115,12 @@ DEADLINE: <2024-10-31 Thu>
 :PROPERTIES:
 :ID:       bb79c8ad-cc2c-40a8-8be8-359c30b10a26
 :END:
-** [ ] Control and pipelining, metric prefixes
+** [X] Control and pipelining, metric prefixes
 DEADLINE: <2024-11-05 Tue>
 :PROPERTIES:
 :ID:       bda1fcae-fecc-4752-9b67-0cecf02ffac8
 :END:
-*** [ ] §4.6
+*** [X] §4.6
 :PROPERTIES:
 :ID:       2689d6cd-cdf6-42b5-a676-972ca97e05d4
 :END:
